Fix alignment of the text tab title

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -785,7 +785,6 @@ main {
   font-size: 12px;
   line-height: 24px;
   padding: 12px 16px;
-  text-align: center;
 }
 
 .inspector h3 {
